Sat Jun 11 19:42:50 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ChangeLog (vim): set shiftwidth to 2.

Sat Jun 11 19:27:06 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_x509req.c: raise RequestError instead of
	  CertificateError when Request#to_der gets an error from OpenSSL.
	  Patch from Ippei Obayashi, see #4420. I cannot write a test for
	  this... Request does not allow to create broken bytes...

Sat Jun 11 19:34:51 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (Date::(ABBR_)?(MONTH|DAY)NAMES): should be usascii.

Sat Jun 11 19:24:33 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: rewrote doc.

Sat Jun 11 19:04:15 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::GlobOption#non_options): should run
	  with 1.8.

Sat Jun 11 18:05:57 2011  WATANABE Hirofumi  <eban@ruby-lang.org>

	* bootstraptest/runner.rb: should initilize $stress to avoid warnings.

Sat Jun 11 18:02:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_getc): should be 7bit if ascii.  fixes #4557

Sat Jun 11 16:52:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (rb_enc_uint_chr): fix message format. Bug#4869

Sat Jun 11 16:28:25 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/formatters/pretty.rb
	  (REXML::Formatters::Pretty#write_text),
	  test/rexml/test_core.rb
	  (Tester#test_pretty_format_long_text_finite): don't ignore
	  'width' parameter in pretty formatter. fixes #4498
	  Reported by Michael Frasca. Thanks!!!

Sat Jun 11 16:11:36 2011  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_core.rb
	  (Tester#test_pretty_format_long_text_finite): remove needless
	  assert_nothing_raised.

Sat Jun 11 16:04:03 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/xpathparser.rb
	  (REXML::Parsers::XPathParser#parse),
	  test/rexml/test_elements.rb
	  (ElementsTester#test_each_with_frozen_condition):
	  don't modify original XPath. fixes #4161